Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Tenant Help</title>
 </head>
 <body>
-  <h1>Hello, world! Tenant Help coming soon.</h1>
+  <h1>Hello, world! Tenant Help coming soon1.</h1>
 </body>
 </html>
