--- a/index.html
+++ b/index.html
@@ -1,71 +1,28 @@
-/* Basic page styling */
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Lease-Decoder-AI</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  margin: 0;
-  padding: 0;
-  background: #f5f7fb;
-  color: #111827;
-}
+<body>
+  <header>
+    <h1>Tenant Help</h1>
+  </header>
 
-header {
-  background: #111827;
-  color: white;
-  padding: 1.5rem 2rem;
-}
+  <main>
+    <h2>Welcome to Lease-Decoder-AI</h2>
+    <p>This site will soon help tenants decode leases and find legal support.</p>
 
-header h1 {
-  margin: 0;
-  font-size: 1.8rem;
-}
+    <div class="button-row">
+      <a href="#">AI Lease Checker</a>
+      <a href="#" class="secondary">Browse Resources</a>
+    </div>
+  </main>
 
-main {
-  max-width: 800px;
-  margin: 2rem auto;
-  padding: 1.5rem;
-  background: white;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(15, 23, 42, 0.08);
-}
-
-h2 {
-  margin-top: 0;
-}
-
-p {
-  line-height: 1.5;
-}
-
-.button-row {
-  margin-top: 1.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.75rem;
-}
-
-.button-row a {
-  text-decoration: none;
-  padding: 0.7rem 1.2rem;
-  border-radius: 999px;
-  background: #2563eb;
-  color: white;
-  font-size: 0.95rem;
-}
-
-.button-row a.secondary {
-  background: #e5e7eb;
-  color: #111827;
-}
-
-footer {
-  text-align: center;
-  padding: 1rem;
-  font-size: 0.8rem;
-  color: #6b7280;
-}
+  <footer>
+    © 2025 Tenant Help — All Rights Reserved
+  </footer>
+</body>
+</html>
