Update header, footer, and main content in index.html

--- a/index.html
+++ b/index.html
@@ -2,27 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Lease-Decoder-AI</title>
+  <title>Lease-Decoder-AI | Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <header>
-    <h1>Tenant Help</h1>
+  <header class="site-header">
+    <div class="site-logo">Tenant Help</div>
+    <nav class="site-nav">
+      <a href="index.html" class="active">Home</a>
+      <a href="lease-decoder.html">Lease Decoder AI</a>
+      <a href="lease-red-flags.html">Lease Red Flags</a>
+      <a href="common-questions.html">Common Lease Questions</a>
+      <a href="legal-help.html">Get Legal Help</a>
+    </nav>
   </header>
 
   <main>
     <h2>Welcome to Lease-Decoder-AI</h2>
-    <p>This site will soon help tenants decode leases and find legal support.</p>
+    <p>
+      This site will soon help tenants decode leases and find legal support.
+      Right now it's an early prototype while the tools are being built.
+    </p>
 
     <div class="button-row">
-      <a href="#">AI Lease Checker</a>
-      <a href="#" class="secondary">Browse Resources</a>
+      <a href="lease-decoder.html">AI Lease Checker</a>
+      <a href="lease-red-flags.html" class="secondary">Browse Resources</a>
     </div>
   </main>
 
   <footer>
-    © 2025 Tenant Help — All Rights Reserved
+    © 2025 Tenant Help — This site does not provide legal advice.
   </footer>
 </body>
 </html>
