Revamp homepage content for Lease-Decoder-AI
Updated the main content to introduce Lease-Decoder-AI and its features, including a hero section and feature cards.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,99 @@
   </header>
 
   <main>
-    <h2>Welcome to Lease-Decoder-AI</h2>
-    <p>
-      This site will soon help tenants decode leases and find legal support.
-      Right now it's an early prototype while the tools are being built.
-    </p>
-
-    <div class="button-row">
-      <a href="lease-decoder.html">AI Lease Checker</a>
-      <a href="lease-red-flags.html" class="secondary">Browse Resources</a>
+<main>
+  <!-- Hero section with image -->
+  <section class="hero">
+    <div class="hero-text">
+      <h2>Understand your lease. Protect your housing.</h2>
+      <p>
+        Lease-Decoder-AI helps tenants spot red flags, find free legal help, and write clear, firm
+        messages to landlords and roommates. This site is still in development, but the tools here
+        are already usable.
+      </p>
+      <div class="hero-buttons">
+        <a href="lease-decoder.html" class="btn primary">Go to Lease Decoder AI</a>
+        <a href="common-questions.html" class="btn secondary">Browse FAQs</a>
+      </div>
     </div>
+
+    <div class="hero-image">
+      <!-- Make sure this file is uploaded to your repo root with this exact name -->
+      <img src="apartment picture.jpg" alt="Apartments and housing" />
+    </div>
+  </section>
+
+  <!-- Feature cards linking to each page -->
+  <section class="feature-section">
+    <h3>What this site can help you with</h3>
+    <div class="feature-grid">
+      <article class="feature-card">
+        <h4>Lease Decoder AI</h4>
+        <p>
+          Upload your lease and (in the future) get a plain-language explanation of common red flags
+          and tricky clauses.
+        </p>
+        <a href="lease-decoder.html" class="feature-link">Go to Lease Decoder AI →</a>
+      </article>
+
+      <article class="feature-card">
+        <h4>Lease Red Flags</h4>
+        <p>
+          Learn about unfair or risky terms to watch for before you sign, renew, or move into a new
+          place.
+        </p>
+        <a href="lease-red-flags.html" class="feature-link">View red flags →</a>
+      </article>
+
+      <article class="feature-card">
+        <h4>Common Lease Questions</h4>
+        <p>
+          Browse FAQs about repairs, deposits, roommates, renewals, and what “unsafe” or
+          “uninhabitable” can mean.
+        </p>
+        <a href="common-questions.html" class="feature-link">Read FAQs →</a>
+      </article>
+
+      <article class="feature-card">
+        <h4>Get Legal Help</h4>
+        <p>
+          Find tenant legal aid and university legal clinics based on your state, county, and school,
+          starting with Alaska and Alabama.
+        </p>
+        <a href="legal-help.html" class="feature-link">Find legal help →</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- Contact / feedback box -->
+  <section class="contact-section">
+    <h3>Problems with the site? Need something added?</h3>
+    <div class="contact-box">
+      <p>
+        This project is still in development. If you spot incorrect information, broken links, or
+        want to suggest a resource, you can send feedback here. For now, this will open your email
+        app and draft a message.
+      </p>
+
+      <!-- Replace the email address below with your real one when you're ready -->
+      <form action="mailto:hrc00017@terpmail.umd.edu" method="post" enctype="text/plain">
+        <label for="feedbackEmail">Your email (optional)</label>
+        <input id="feedbackEmail" name="From" type="email" placeholder="you@example.com" />
+
+        <label for="feedbackMessage">Describe the problem or suggestion</label>
+        <textarea id="feedbackMessage" name="Message" rows="4"
+          placeholder="Tell me what’s wrong, what’s missing, or what you’d like to see."></textarea>
+
+        <button type="submit" class="btn primary">Send feedback</button>
+      </form>
+
+      <p class="contact-note">
+        Prefer not to use this form? You can copy your message and email it directly to
+        <strong>hrc00017@terpmail.umd.edu</strong>.
+      </p>
+    </div>
+  </section>
+</main>
   </main>
 
   <footer>
