Revise lease red flags content and add disclaimer
Updated the lease red flags section to include detailed explanations and examples of common issues in lease agreements, along with a disclaimer about legal advice.

--- a/lease-red-flags.html
+++ b/lease-red-flags.html
@@ -18,14 +18,199 @@
     </nav>
   </header>
 
-  <main>
-    <h2>Lease Red Flags</h2>
+<main>
+  <h2>Lease Agreement Red Flags</h2>
+
+  <!-- Big disclaimer -->
+  <div class="disclaimer-box">
+    <strong>Important:</strong>
+    <span>
+      This page gives general examples of lease red flags. What is legal or enforceable
+      can depend on your state, city, and the exact wording in your lease. This is
+      <strong>not legal advice</strong>. If something on your lease worries you, talk to a
+      tenant legal aid organization or a licensed attorney in your area.
+    </span>
+  </div>
+
+  <!-- Quick jump links -->
+  <section class="flag-intro">
     <p>
-      This page will collect common red flags in leases explained in plain English,
-      along with suggestions for follow-up questions and safer alternatives.
+      These are common issues to watch for <em>before you sign, renew, or move in</em>.
+      You can use this as a checklist when reading your lease.
     </p>
-    <p><em>Content coming soon.</em></p>
-  </main>
+
+    <div class="flag-quick-links">
+      <a href="#maintenance" class="pill-link">Maintenance & Repairs</a>
+      <a href="#fees" class="pill-link">Fees & Money</a>
+      <a href="#term-renewal" class="pill-link">Lease Length & Renewal</a>
+      <a href="#privacy" class="pill-link">Privacy & Entry</a>
+      <a href="#rights" class="pill-link">Legal Rights & Discrimination</a>
+      <a href="#utilities" class="pill-link">Utilities & Extra Rules</a>
+    </div>
+  </section>
+
+  <!-- Maintenance & repairs -->
+  <section id="maintenance" class="flag-section">
+    <h3>Maintenance & Repairs</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Vague or missing maintenance responsibilities</h4>
+      <p>
+        If the lease doesn’t clearly say who handles repairs, appliances, pest control, and HVAC,
+        the landlord may later claim everything is “tenant responsibility.”
+        A good lease says <em>who handles what</em> and how to request repairs.
+      </p>
+    </article>
+  </section>
+
+  <!-- Fees & money -->
+  <section id="fees" class="flag-section">
+    <h3>Fees, Deposits & Money</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Excessive or unclear fees</h4>
+      <p>
+        Watch for vague charges like “administrative fees,” “convenience fees,” or unspecified
+        move-in/move-out fees. If a fee is not itemized or explained in writing, that’s a red flag.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">No grace period for rent</h4>
+      <p>
+        If late fees start the morning rent is due with no grace period, expect strict enforcement.
+        Some areas require a short grace period by law.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Extremely high or daily late fees</h4>
+      <p>
+        Very high flat late fees or fees that grow daily can add up quickly. Some states cap late
+        fees or require that they be “reasonable.” Anything that seems punitive is a warning sign.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Unclear security deposit rules</h4>
+      <p>
+        A lease should say how much the deposit is, where it is held (if your state requires this),
+        what deductions are allowed, and when it must be returned. Vague or missing deposit rules
+        often lead to disputes at move-out.
+      </p>
+    </article>
+  </section>
+
+  <!-- Lease term & renewal -->
+  <section id="term-renewal" class="flag-section">
+    <h3>Lease Length, Renewal, and Leaving Early</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Unfair or missing early termination rules</h4>
+      <p>
+        If breaking the lease means paying all remaining rent with no exceptions, that is a big
+        financial risk. Some leases allow a fixed lease-break fee or re-rental process instead.
+        Look for what happens if you need to move for safety, health, or job reasons.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Automatic renewal without clear notice</h4>
+      <p>
+        Some leases automatically renew for another full term if you don’t give written notice
+        (for example, 60 days before the end date). If you miss the window, you may be locked in
+        for another year. Make sure renewal rules and notice deadlines are clear.
+      </p>
+    </article>
+  </section>
+
+  <!-- Privacy & entry -->
+  <section id="privacy" class="flag-section">
+    <h3>Privacy, Inspections & Landlord Entry</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Landlord can enter “at any time for any reason”</h4>
+      <p>
+        Most places require landlords to give notice before entering your home except in an
+        emergency. A lease that allows entry “at any time” with no notice or reason is a serious
+        privacy red flag.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Very restrictive guest rules</h4>
+      <p>
+        Reasonable guest limits are common, but rules that completely ban guests or severely limit
+        overnight visitors can be a sign of a controlling landlord or management company.
+      </p>
+    </article>
+  </section>
+
+  <!-- Legal rights & discrimination -->
+  <section id="rights" class="flag-section">
+    <h3>Legal Rights, Fair Housing & Discrimination</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Clauses that “waive” your legal rights</h4>
+      <p>
+        Be cautious of any statement like “tenant waives right to sue,” “tenant waives right to
+        a jury trial,” or “landlord not responsible for anything, even if negligent.” Many of
+        these are not enforceable, but including them is a major red flag.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Illegal or discriminatory terms</h4>
+      <p>
+        Some examples include blanket bans on emotional support animals where the law requires
+        accommodation, charging extra rent for ESAs, or rules that appear to target certain
+        groups of people. Fair housing protections are different by state, but anything that
+        looks discriminatory deserves a closer look and legal advice.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Hidden rules in “house rules” or extra documents</h4>
+      <p>
+        Leases sometimes push restrictive rules into separate documents like “community
+        policies” or “house rules” that can change at any time. Always ask for copies of
+        every addendum, rulebook, or policy mentioned in the lease before you sign.
+      </p>
+    </article>
+  </section>
+
+  <!-- Utilities & extra rules -->
+  <section id="utilities" class="flag-section">
+    <h3>Utilities, Cleaning & Extra Requirements</h3>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Mandatory move-out cleaning with one specific company</h4>
+      <p>
+        Some leases require you to pay a particular cleaning company at move-out. This can be
+        used to charge inflated or unnecessary fees. It’s a red flag if you have no choice
+        or if prices are not clearly disclosed.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Renter’s insurance required through one provider</h4>
+      <p>
+        Landlords can usually require renter’s insurance, but you should be allowed to choose
+        the insurance company. Being forced to buy through one specific provider can be a sign
+        of unnecessary extra cost.
+      </p>
+    </article>
+
+    <article class="flag-card">
+      <h4 class="flag-title">Utility billing that hides how charges are calculated</h4>
+      <p>
+        Examples include “ratio billing” where utilities are split among tenants but the math is
+        not explained, or flat “utility fees” that can be increased later at the landlord’s
+        discretion. If you can’t tell how your bill is calculated, ask questions before signing.
+      </p>
+    </article>
+  </section>
+</main>
 
   <footer>
     © 2025 Tenant Help — This site does not provide legal advice.
